tools/tests/errors/return_annotation_violation.ki
var f = Function() -> Integer:
    return "text"
f()
